Wrap table in fixed-height div to stop jumpiness on search

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -23,6 +23,10 @@
   text-align: center;
 }
 
+.table-container {
+  height: 400px;
+}
+
 .applicant-list {
   border: 1px solid black;
   padding-left: 0;
